# grpo-llm-evaluator

./: .gitignore  README.md  pyproject.toml  training.yaml
configs/: example.yaml
grpo_llm_eval/: args.py  config.py  main.py  requirements.txt
grpo_llm_eval/app/: gradio.py
grpo_llm_eval/func/: config_utils.py  data_utils.py  evaluation_utils.py  generation_utils.py  model_utils.py  trl_utils.py
~/.models/: training_log.txt
